test/libsolidity/syntaxTests/constructor/two_constructors.sol
contract test {
	constructor(uint) { }
	constructor() {}
}
// ----
// DeclarationError: (47-70): More than one constructor defined.
